# protobuf_parser

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yml  CMakeLists.txt  LICENSE  README.md  build.py  build_protobuf.py  noop.py  pyproject.toml  test.proto  test.py
.github/workflows/: build.yml
docs/: api.rst  conf.py  index.rst
protobuf_parser/: __init__.py  _impl.py  _parser.cpp  _parser.pyi  _types.py  protoc.cpp
protobuf_parser/_parser/: __init__.pyi  errors.cpp  lib.cpp  parse.cpp  run.cpp
tests/: test.proto  test_errors.proto  test_errors_pb2.py  test_parse.py  test_pb2.py  test_run.py
