# cmake_minimum_required(VERSION 3.19)
# project(protobuf_parser)

# set(CMAKE_CXX_STANDARD 14)

# include_directories(.)
# include_directories(include)
# include_directories(include/pybind11)
# include_directories(include/pybind11/detail)
# include_directories(protobuf/src)
# include_directories(protobuf/src/google/protobuf/compiler)
# include_directories(protobuf/src/google/protobuf/compiler/cpp)
# include_directories(protobuf/src/google/protobuf/compiler/csharp)
# include_directories(protobuf/src/google/protobuf/compiler/java)
# include_directories(protobuf/src/google/protobuf/compiler/js)
# include_directories(protobuf/src/google/protobuf/compiler/objectivec)
# include_directories(protobuf/src/google/protobuf/compiler/php)
# include_directories(protobuf/src/google/protobuf/compiler/python)
# include_directories(protobuf/src/google/protobuf/compiler/ruby)
# include_directories(protobuf/src/google/protobuf/io)
# include_directories(protobuf/src/google/protobuf/stubs)
# include_directories(protobuf/src/google/protobuf/testing)
# include_directories(protobuf/src/google/protobuf/util)
# include_directories(protobuf/src/google/protobuf/util/internal)

# add_executable(protobuf_parser
#         include/pybind11/detail/class.h
#         include/pybind11/detail/common.h
#         include/pybind11/detail/descr.h
#         include/pybind11/detail/init.h
#         include/pybind11/detail/internals.h
#         include/pybind11/detail/typeid.h
#         include/pybind11/attr.h
#         include/pybind11/buffer_info.h
#         include/pybind11/cast.h
#         include/pybind11/chrono.h
#         include/pybind11/common.h
#         include/pybind11/complex.h
#         include/pybind11/eigen.h
#         include/pybind11/embed.h
#         include/pybind11/eval.h
#         include/pybind11/functional.h
#         include/pybind11/iostream.h
#         include/pybind11/numpy.h
#         include/pybind11/operators.h
#         include/pybind11/options.h
#         include/pybind11/pybind11.h
#         include/pybind11/pytypes.h
#         include/pybind11/stl.h
#         include/pybind11/stl_bind.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_bootstrap_unittest.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_enum.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_enum.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_enum_field.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_enum_field.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_extension.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_extension.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_field.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_field.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_file.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_file.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_generator.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_generator.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_helpers.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_helpers.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_map_field.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_map_field.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_message.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_message.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_message_field.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_message_field.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_message_layout_helper.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_move_unittest.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_names.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_options.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_padding_optimizer.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_padding_optimizer.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_parse_function_generator.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_parse_function_generator.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_plugin_unittest.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_primitive_field.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_primitive_field.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_service.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_service.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_string_field.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_string_field.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_test_bad_identifiers.proto
#         protobuf/src/google/protobuf/compiler/cpp/cpp_test_large_enum_value.proto
#         protobuf/src/google/protobuf/compiler/cpp/cpp_unittest.cc
#         protobuf/src/google/protobuf/compiler/cpp/cpp_unittest.h
#         protobuf/src/google/protobuf/compiler/cpp/cpp_unittest.inc
#         protobuf/src/google/protobuf/compiler/cpp/metadata_test.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_bootstrap_unittest.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_doc_comment.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_doc_comment.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_enum.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_enum.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_enum_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_enum_field.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_field_base.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_field_base.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_generator.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_generator.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_generator_unittest.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_helpers.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_helpers.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_map_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_map_field.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_message.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_message.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_message_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_message_field.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_names.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_options.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_primitive_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_primitive_field.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_reflection_class.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_reflection_class.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_repeated_enum_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_repeated_enum_field.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_repeated_message_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_repeated_message_field.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_repeated_primitive_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_repeated_primitive_field.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_source_generator_base.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_source_generator_base.h
#         protobuf/src/google/protobuf/compiler/csharp/csharp_wrapper_field.cc
#         protobuf/src/google/protobuf/compiler/csharp/csharp_wrapper_field.h
#         protobuf/src/google/protobuf/compiler/java/java_context.cc
#         protobuf/src/google/protobuf/compiler/java/java_context.h
#         protobuf/src/google/protobuf/compiler/java/java_doc_comment.cc
#         protobuf/src/google/protobuf/compiler/java/java_doc_comment.h
#         protobuf/src/google/protobuf/compiler/java/java_doc_comment_unittest.cc
#         protobuf/src/google/protobuf/compiler/java/java_enum.cc
#         protobuf/src/google/protobuf/compiler/java/java_enum.h
#         protobuf/src/google/protobuf/compiler/java/java_enum_field.cc
#         protobuf/src/google/protobuf/compiler/java/java_enum_field.h
#         protobuf/src/google/protobuf/compiler/java/java_enum_field_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_enum_field_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_enum_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_enum_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_extension.cc
#         protobuf/src/google/protobuf/compiler/java/java_extension.h
#         protobuf/src/google/protobuf/compiler/java/java_extension_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_extension_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_field.cc
#         protobuf/src/google/protobuf/compiler/java/java_field.h
#         protobuf/src/google/protobuf/compiler/java/java_file.cc
#         protobuf/src/google/protobuf/compiler/java/java_file.h
#         protobuf/src/google/protobuf/compiler/java/java_generator.cc
#         protobuf/src/google/protobuf/compiler/java/java_generator.h
#         protobuf/src/google/protobuf/compiler/java/java_generator_factory.cc
#         protobuf/src/google/protobuf/compiler/java/java_generator_factory.h
#         protobuf/src/google/protobuf/compiler/java/java_helpers.cc
#         protobuf/src/google/protobuf/compiler/java/java_helpers.h
#         protobuf/src/google/protobuf/compiler/java/java_kotlin_generator.cc
#         protobuf/src/google/protobuf/compiler/java/java_kotlin_generator.h
#         protobuf/src/google/protobuf/compiler/java/java_map_field.cc
#         protobuf/src/google/protobuf/compiler/java/java_map_field.h
#         protobuf/src/google/protobuf/compiler/java/java_map_field_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_map_field_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_message.cc
#         protobuf/src/google/protobuf/compiler/java/java_message.h
#         protobuf/src/google/protobuf/compiler/java/java_message_builder.cc
#         protobuf/src/google/protobuf/compiler/java/java_message_builder.h
#         protobuf/src/google/protobuf/compiler/java/java_message_builder_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_message_builder_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_message_field.cc
#         protobuf/src/google/protobuf/compiler/java/java_message_field.h
#         protobuf/src/google/protobuf/compiler/java/java_message_field_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_message_field_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_message_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_message_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_name_resolver.cc
#         protobuf/src/google/protobuf/compiler/java/java_name_resolver.h
#         protobuf/src/google/protobuf/compiler/java/java_names.h
#         protobuf/src/google/protobuf/compiler/java/java_options.h
#         protobuf/src/google/protobuf/compiler/java/java_plugin_unittest.cc
#         protobuf/src/google/protobuf/compiler/java/java_primitive_field.cc
#         protobuf/src/google/protobuf/compiler/java/java_primitive_field.h
#         protobuf/src/google/protobuf/compiler/java/java_primitive_field_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_primitive_field_lite.h
#         protobuf/src/google/protobuf/compiler/java/java_service.cc
#         protobuf/src/google/protobuf/compiler/java/java_service.h
#         protobuf/src/google/protobuf/compiler/java/java_shared_code_generator.cc
#         protobuf/src/google/protobuf/compiler/java/java_shared_code_generator.h
#         protobuf/src/google/protobuf/compiler/java/java_string_field.cc
#         protobuf/src/google/protobuf/compiler/java/java_string_field.h
#         protobuf/src/google/protobuf/compiler/java/java_string_field_lite.cc
#         protobuf/src/google/protobuf/compiler/java/java_string_field_lite.h
#         protobuf/src/google/protobuf/compiler/js/js_generator.cc
#         protobuf/src/google/protobuf/compiler/js/js_generator.h
#         protobuf/src/google/protobuf/compiler/js/well_known_types_embed.cc
#         protobuf/src/google/protobuf/compiler/js/well_known_types_embed.h
#         protobuf/src/google/protobuf/compiler/objectivec/method_dump.sh
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_enum.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_enum.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_enum_field.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_enum_field.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_extension.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_extension.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_field.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_field.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_file.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_file.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_generator.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_generator.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_helpers.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_helpers.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_helpers_unittest.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_map_field.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_map_field.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_message.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_message.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_message_field.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_message_field.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_nsobject_methods.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_oneof.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_oneof.h
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_primitive_field.cc
#         protobuf/src/google/protobuf/compiler/objectivec/objectivec_primitive_field.h
#         protobuf/src/google/protobuf/compiler/php/php_generator.cc
#         protobuf/src/google/protobuf/compiler/php/php_generator.h
#         protobuf/src/google/protobuf/compiler/python/python_generator.cc
#         protobuf/src/google/protobuf/compiler/python/python_generator.h
#         protobuf/src/google/protobuf/compiler/python/python_plugin_unittest.cc
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_code.proto
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_code_pb.rb
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_code_proto2.proto
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_code_proto2_pb.rb
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_pkg_explicit.proto
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_pkg_explicit_legacy.proto
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_pkg_explicit_legacy_pb.rb
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_pkg_explicit_pb.rb
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_pkg_implicit.proto
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generated_pkg_implicit_pb.rb
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generator.cc
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generator.h
#         protobuf/src/google/protobuf/compiler/ruby/ruby_generator_unittest.cc
#         protobuf/src/google/protobuf/compiler/annotation_test_util.cc
#         protobuf/src/google/protobuf/compiler/annotation_test_util.h
#         protobuf/src/google/protobuf/compiler/code_generator.cc
#         protobuf/src/google/protobuf/compiler/code_generator.h
#         protobuf/src/google/protobuf/compiler/command_line_interface.cc
#         protobuf/src/google/protobuf/compiler/command_line_interface.h
#         protobuf/src/google/protobuf/compiler/command_line_interface_unittest.cc
#         protobuf/src/google/protobuf/compiler/importer.cc
#         protobuf/src/google/protobuf/compiler/importer.h
#         protobuf/src/google/protobuf/compiler/importer_unittest.cc
#         protobuf/src/google/protobuf/compiler/main.cc
#         protobuf/src/google/protobuf/compiler/mock_code_generator.cc
#         protobuf/src/google/protobuf/compiler/mock_code_generator.h
#         protobuf/src/google/protobuf/compiler/package_info.h
#         protobuf/src/google/protobuf/compiler/parser.cc
#         protobuf/src/google/protobuf/compiler/parser.h
#         protobuf/src/google/protobuf/compiler/parser_unittest.cc
#         protobuf/src/google/protobuf/compiler/plugin.cc
#         protobuf/src/google/protobuf/compiler/plugin.h
#         protobuf/src/google/protobuf/compiler/plugin.pb.cc
#         protobuf/src/google/protobuf/compiler/plugin.pb.h
#         protobuf/src/google/protobuf/compiler/plugin.proto
#         protobuf/src/google/protobuf/compiler/scc.h
#         protobuf/src/google/protobuf/compiler/subprocess.cc
#         protobuf/src/google/protobuf/compiler/subprocess.h
#         protobuf/src/google/protobuf/compiler/test_plugin.cc
#         protobuf/src/google/protobuf/compiler/zip_output_unittest.sh
#         protobuf/src/google/protobuf/compiler/zip_writer.cc
#         protobuf/src/google/protobuf/compiler/zip_writer.h
#         protobuf/src/google/protobuf/io/coded_stream.cc
#         protobuf/src/google/protobuf/io/coded_stream.h
#         protobuf/src/google/protobuf/io/coded_stream_unittest.cc
#         protobuf/src/google/protobuf/io/gzip_stream.cc
#         protobuf/src/google/protobuf/io/gzip_stream.h
#         protobuf/src/google/protobuf/io/gzip_stream_unittest.sh
#         protobuf/src/google/protobuf/io/io_win32.cc
#         protobuf/src/google/protobuf/io/io_win32.h
#         protobuf/src/google/protobuf/io/io_win32_unittest.cc
#         protobuf/src/google/protobuf/io/package_info.h
#         protobuf/src/google/protobuf/io/printer.cc
#         protobuf/src/google/protobuf/io/printer.h
#         protobuf/src/google/protobuf/io/printer_unittest.cc
#         protobuf/src/google/protobuf/io/strtod.cc
#         protobuf/src/google/protobuf/io/strtod.h
#         protobuf/src/google/protobuf/io/tokenizer.cc
#         protobuf/src/google/protobuf/io/tokenizer.h
#         protobuf/src/google/protobuf/io/tokenizer_unittest.cc
#         protobuf/src/google/protobuf/io/zero_copy_stream.cc
#         protobuf/src/google/protobuf/io/zero_copy_stream.h
#         protobuf/src/google/protobuf/io/zero_copy_stream_impl.cc
#         protobuf/src/google/protobuf/io/zero_copy_stream_impl.h
#         protobuf/src/google/protobuf/io/zero_copy_stream_impl_lite.cc
#         protobuf/src/google/protobuf/io/zero_copy_stream_impl_lite.h
#         protobuf/src/google/protobuf/io/zero_copy_stream_unittest.cc
#         protobuf/src/google/protobuf/stubs/bytestream.cc
#         protobuf/src/google/protobuf/stubs/bytestream.h
#         protobuf/src/google/protobuf/stubs/bytestream_unittest.cc
#         protobuf/src/google/protobuf/stubs/callback.h
#         protobuf/src/google/protobuf/stubs/casts.h
#         protobuf/src/google/protobuf/stubs/common.cc
#         protobuf/src/google/protobuf/stubs/common.h
#         protobuf/src/google/protobuf/stubs/common_unittest.cc
#         protobuf/src/google/protobuf/stubs/hash.h
#         protobuf/src/google/protobuf/stubs/int128.cc
#         protobuf/src/google/protobuf/stubs/int128.h
#         protobuf/src/google/protobuf/stubs/int128_unittest.cc
#         protobuf/src/google/protobuf/stubs/logging.h
#         protobuf/src/google/protobuf/stubs/macros.h
#         protobuf/src/google/protobuf/stubs/map_util.h
#         protobuf/src/google/protobuf/stubs/mathutil.h
#         protobuf/src/google/protobuf/stubs/mutex.h
#         protobuf/src/google/protobuf/stubs/once.h
#         protobuf/src/google/protobuf/stubs/platform_macros.h
#         protobuf/src/google/protobuf/stubs/port.h
#         protobuf/src/google/protobuf/stubs/status.cc
#         protobuf/src/google/protobuf/stubs/status.h
#         protobuf/src/google/protobuf/stubs/status_macros.h
#         protobuf/src/google/protobuf/stubs/status_test.cc
#         protobuf/src/google/protobuf/stubs/statusor.cc
#         protobuf/src/google/protobuf/stubs/statusor.h
#         protobuf/src/google/protobuf/stubs/statusor_test.cc
#         protobuf/src/google/protobuf/stubs/stl_util.h
#         protobuf/src/google/protobuf/stubs/stringpiece.cc
#         protobuf/src/google/protobuf/stubs/stringpiece.h
#         protobuf/src/google/protobuf/stubs/stringpiece_unittest.cc
#         protobuf/src/google/protobuf/stubs/stringprintf.cc
#         protobuf/src/google/protobuf/stubs/stringprintf.h
#         protobuf/src/google/protobuf/stubs/stringprintf_unittest.cc
#         protobuf/src/google/protobuf/stubs/structurally_valid.cc
#         protobuf/src/google/protobuf/stubs/structurally_valid_unittest.cc
#         protobuf/src/google/protobuf/stubs/strutil.cc
#         protobuf/src/google/protobuf/stubs/strutil.h
#         protobuf/src/google/protobuf/stubs/strutil_unittest.cc
#         protobuf/src/google/protobuf/stubs/substitute.cc
#         protobuf/src/google/protobuf/stubs/substitute.h
#         protobuf/src/google/protobuf/stubs/template_util.h
#         protobuf/src/google/protobuf/stubs/template_util_unittest.cc
#         protobuf/src/google/protobuf/stubs/time.cc
#         protobuf/src/google/protobuf/stubs/time.h
#         protobuf/src/google/protobuf/stubs/time_test.cc
#         protobuf/src/google/protobuf/testdata/bad_utf8_string
#         protobuf/src/google/protobuf/testdata/golden_message
#         protobuf/src/google/protobuf/testdata/golden_message_maps
#         protobuf/src/google/protobuf/testdata/golden_message_oneof_implemented
#         protobuf/src/google/protobuf/testdata/golden_message_proto3
#         protobuf/src/google/protobuf/testdata/golden_packed_fields_message
#         protobuf/src/google/protobuf/testdata/map_test_data.txt
#         protobuf/src/google/protobuf/testdata/text_format_unittest_data.txt
#         protobuf/src/google/protobuf/testdata/text_format_unittest_data_oneof_implemented.txt
#         protobuf/src/google/protobuf/testdata/text_format_unittest_data_pointy.txt
#         protobuf/src/google/protobuf/testdata/text_format_unittest_data_pointy_oneof.txt
#         protobuf/src/google/protobuf/testdata/text_format_unittest_extensions_data.txt
#         protobuf/src/google/protobuf/testdata/text_format_unittest_extensions_data_pointy.txt
#         protobuf/src/google/protobuf/testing/file.cc
#         protobuf/src/google/protobuf/testing/file.h
#         protobuf/src/google/protobuf/testing/googletest.cc
#         protobuf/src/google/protobuf/testing/googletest.h
#         protobuf/src/google/protobuf/testing/zcgunzip.cc
#         protobuf/src/google/protobuf/testing/zcgzip.cc
#         protobuf/src/google/protobuf/util/internal/testdata/anys.proto
#         protobuf/src/google/protobuf/util/internal/testdata/books.proto
#         protobuf/src/google/protobuf/util/internal/testdata/default_value.proto
#         protobuf/src/google/protobuf/util/internal/testdata/default_value_test.proto
#         protobuf/src/google/protobuf/util/internal/testdata/field_mask.proto
#         protobuf/src/google/protobuf/util/internal/testdata/maps.proto
#         protobuf/src/google/protobuf/util/internal/testdata/oneofs.proto
#         protobuf/src/google/protobuf/util/internal/testdata/proto3.proto
#         protobuf/src/google/protobuf/util/internal/testdata/struct.proto
#         protobuf/src/google/protobuf/util/internal/testdata/timestamp_duration.proto
#         protobuf/src/google/protobuf/util/internal/testdata/wrappers.proto
#         protobuf/src/google/protobuf/util/internal/constants.h
#         protobuf/src/google/protobuf/util/internal/datapiece.cc
#         protobuf/src/google/protobuf/util/internal/datapiece.h
#         protobuf/src/google/protobuf/util/internal/default_value_objectwriter.cc
#         protobuf/src/google/protobuf/util/internal/default_value_objectwriter.h
#         protobuf/src/google/protobuf/util/internal/default_value_objectwriter_test.cc
#         protobuf/src/google/protobuf/util/internal/error_listener.cc
#         protobuf/src/google/protobuf/util/internal/error_listener.h
#         protobuf/src/google/protobuf/util/internal/expecting_objectwriter.h
#         protobuf/src/google/protobuf/util/internal/field_mask_utility.cc
#         protobuf/src/google/protobuf/util/internal/field_mask_utility.h
#         protobuf/src/google/protobuf/util/internal/json_escaping.cc
#         protobuf/src/google/protobuf/util/internal/json_escaping.h
#         protobuf/src/google/protobuf/util/internal/json_objectwriter.cc
#         protobuf/src/google/protobuf/util/internal/json_objectwriter.h
#         protobuf/src/google/protobuf/util/internal/json_objectwriter_test.cc
#         protobuf/src/google/protobuf/util/internal/json_stream_parser.cc
#         protobuf/src/google/protobuf/util/internal/json_stream_parser.h
#         protobuf/src/google/protobuf/util/internal/json_stream_parser_test.cc
#         protobuf/src/google/protobuf/util/internal/location_tracker.h
#         protobuf/src/google/protobuf/util/internal/mock_error_listener.h
#         protobuf/src/google/protobuf/util/internal/object_location_tracker.h
#         protobuf/src/google/protobuf/util/internal/object_source.h
#         protobuf/src/google/protobuf/util/internal/object_writer.cc
#         protobuf/src/google/protobuf/util/internal/object_writer.h
#         protobuf/src/google/protobuf/util/internal/proto_writer.cc
#         protobuf/src/google/protobuf/util/internal/proto_writer.h
#         protobuf/src/google/protobuf/util/internal/protostream_objectsource.cc
#         protobuf/src/google/protobuf/util/internal/protostream_objectsource.h
#         protobuf/src/google/protobuf/util/internal/protostream_objectsource_test.cc
#         protobuf/src/google/protobuf/util/internal/protostream_objectwriter.cc
#         protobuf/src/google/protobuf/util/internal/protostream_objectwriter.h
#         protobuf/src/google/protobuf/util/internal/protostream_objectwriter_test.cc
#         protobuf/src/google/protobuf/util/internal/structured_objectwriter.h
#         protobuf/src/google/protobuf/util/internal/type_info.cc
#         protobuf/src/google/protobuf/util/internal/type_info.h
#         protobuf/src/google/protobuf/util/internal/type_info_test_helper.cc
#         protobuf/src/google/protobuf/util/internal/type_info_test_helper.h
#         protobuf/src/google/protobuf/util/internal/utility.cc
#         protobuf/src/google/protobuf/util/internal/utility.h
#         protobuf/src/google/protobuf/util/delimited_message_util.cc
#         protobuf/src/google/protobuf/util/delimited_message_util.h
#         protobuf/src/google/protobuf/util/delimited_message_util_test.cc
#         protobuf/src/google/protobuf/util/field_comparator.cc
#         protobuf/src/google/protobuf/util/field_comparator.h
#         protobuf/src/google/protobuf/util/field_comparator_test.cc
#         protobuf/src/google/protobuf/util/field_mask_util.cc
#         protobuf/src/google/protobuf/util/field_mask_util.h
#         protobuf/src/google/protobuf/util/field_mask_util_test.cc
#         protobuf/src/google/protobuf/util/json_format.proto
#         protobuf/src/google/protobuf/util/json_format_proto3.proto
#         protobuf/src/google/protobuf/util/json_util.cc
#         protobuf/src/google/protobuf/util/json_util.h
#         protobuf/src/google/protobuf/util/json_util_test.cc
#         protobuf/src/google/protobuf/util/message_differencer.cc
#         protobuf/src/google/protobuf/util/message_differencer.h
#         protobuf/src/google/protobuf/util/message_differencer_unittest.cc
#         protobuf/src/google/protobuf/util/message_differencer_unittest.proto
#         protobuf/src/google/protobuf/util/package_info.h
#         protobuf/src/google/protobuf/util/time_util.cc
#         protobuf/src/google/protobuf/util/time_util.h
#         protobuf/src/google/protobuf/util/time_util_test.cc
#         protobuf/src/google/protobuf/util/type_resolver.h
#         protobuf/src/google/protobuf/util/type_resolver_util.cc
#         protobuf/src/google/protobuf/util/type_resolver_util.h
#         protobuf/src/google/protobuf/util/type_resolver_util_test.cc
#         protobuf/src/google/protobuf/any.cc
#         protobuf/src/google/protobuf/any.h
#         protobuf/src/google/protobuf/any.pb.cc
#         protobuf/src/google/protobuf/any.pb.h
#         protobuf/src/google/protobuf/any.proto
#         protobuf/src/google/protobuf/any_lite.cc
#         protobuf/src/google/protobuf/any_test.cc
#         protobuf/src/google/protobuf/any_test.proto
#         protobuf/src/google/protobuf/api.pb.cc
#         protobuf/src/google/protobuf/api.pb.h
#         protobuf/src/google/protobuf/api.proto
#         protobuf/src/google/protobuf/arena.cc
#         protobuf/src/google/protobuf/arena.h
#         protobuf/src/google/protobuf/arena_impl.h
#         protobuf/src/google/protobuf/arena_test_util.cc
#         protobuf/src/google/protobuf/arena_test_util.h
#         protobuf/src/google/protobuf/arena_unittest.cc
#         protobuf/src/google/protobuf/arenastring.cc
#         protobuf/src/google/protobuf/arenastring.h
#         protobuf/src/google/protobuf/arenastring_unittest.cc
#         protobuf/src/google/protobuf/descriptor.cc
#         protobuf/src/google/protobuf/descriptor.h
#         protobuf/src/google/protobuf/descriptor.pb.cc
#         protobuf/src/google/protobuf/descriptor.pb.h
#         protobuf/src/google/protobuf/descriptor.proto
#         protobuf/src/google/protobuf/descriptor_database.cc
#         protobuf/src/google/protobuf/descriptor_database.h
#         protobuf/src/google/protobuf/descriptor_database_unittest.cc
#         protobuf/src/google/protobuf/descriptor_unittest.cc
#         protobuf/src/google/protobuf/drop_unknown_fields_test.cc
#         protobuf/src/google/protobuf/duration.pb.cc
#         protobuf/src/google/protobuf/duration.pb.h
#         protobuf/src/google/protobuf/duration.proto
#         protobuf/src/google/protobuf/dynamic_message.cc
#         protobuf/src/google/protobuf/dynamic_message.h
#         protobuf/src/google/protobuf/dynamic_message_unittest.cc
#         protobuf/src/google/protobuf/empty.pb.cc
#         protobuf/src/google/protobuf/empty.pb.h
#         protobuf/src/google/protobuf/empty.proto
#         protobuf/src/google/protobuf/extension_set.cc
#         protobuf/src/google/protobuf/extension_set.h
#         protobuf/src/google/protobuf/extension_set_heavy.cc
#         protobuf/src/google/protobuf/extension_set_inl.h
#         protobuf/src/google/protobuf/extension_set_unittest.cc
#         protobuf/src/google/protobuf/field_mask.pb.cc
#         protobuf/src/google/protobuf/field_mask.pb.h
#         protobuf/src/google/protobuf/field_mask.proto
#         protobuf/src/google/protobuf/generated_enum_reflection.h
#         protobuf/src/google/protobuf/generated_enum_util.cc
#         protobuf/src/google/protobuf/generated_enum_util.h
#         protobuf/src/google/protobuf/generated_message_reflection.cc
#         protobuf/src/google/protobuf/generated_message_reflection.h
#         protobuf/src/google/protobuf/generated_message_reflection_unittest.cc
#         protobuf/src/google/protobuf/generated_message_table_driven.cc
#         protobuf/src/google/protobuf/generated_message_table_driven.h
#         protobuf/src/google/protobuf/generated_message_table_driven_lite.cc
#         protobuf/src/google/protobuf/generated_message_table_driven_lite.h
#         protobuf/src/google/protobuf/generated_message_tctable_decl.h
#         protobuf/src/google/protobuf/generated_message_tctable_full.cc
#         protobuf/src/google/protobuf/generated_message_tctable_impl.h
#         protobuf/src/google/protobuf/generated_message_tctable_impl.inc
#         protobuf/src/google/protobuf/generated_message_tctable_lite.cc
#         protobuf/src/google/protobuf/generated_message_util.cc
#         protobuf/src/google/protobuf/generated_message_util.h
#         protobuf/src/google/protobuf/has_bits.h
#         protobuf/src/google/protobuf/implicit_weak_message.cc
#         protobuf/src/google/protobuf/implicit_weak_message.h
#         protobuf/src/google/protobuf/lite_arena_unittest.cc
#         protobuf/src/google/protobuf/lite_unittest.cc
#         protobuf/src/google/protobuf/map.cc
#         protobuf/src/google/protobuf/map.h
#         protobuf/src/google/protobuf/map_entry.h
#         protobuf/src/google/protobuf/map_entry_lite.h
#         protobuf/src/google/protobuf/map_field.cc
#         protobuf/src/google/protobuf/map_field.h
#         protobuf/src/google/protobuf/map_field_inl.h
#         protobuf/src/google/protobuf/map_field_lite.h
#         protobuf/src/google/protobuf/map_field_test.cc
#         protobuf/src/google/protobuf/map_lite_test_util.cc
#         protobuf/src/google/protobuf/map_lite_test_util.h
#         protobuf/src/google/protobuf/map_lite_unittest.proto
#         protobuf/src/google/protobuf/map_proto2_unittest.proto
#         protobuf/src/google/protobuf/map_test.cc
#         protobuf/src/google/protobuf/map_test_util.h
#         protobuf/src/google/protobuf/map_test_util.inc
#         protobuf/src/google/protobuf/map_test_util_impl.h
#         protobuf/src/google/protobuf/map_type_handler.h
#         protobuf/src/google/protobuf/map_unittest.proto
#         protobuf/src/google/protobuf/message.cc
#         protobuf/src/google/protobuf/message.h
#         protobuf/src/google/protobuf/message_lite.cc
#         protobuf/src/google/protobuf/message_lite.h
#         protobuf/src/google/protobuf/message_unittest.cc
#         protobuf/src/google/protobuf/message_unittest.inc
#         protobuf/src/google/protobuf/metadata.h
#         protobuf/src/google/protobuf/metadata_lite.h
#         protobuf/src/google/protobuf/no_field_presence_test.cc
#         protobuf/src/google/protobuf/package_info.h
#         protobuf/src/google/protobuf/parse_context.cc
#         protobuf/src/google/protobuf/parse_context.h
#         protobuf/src/google/protobuf/port.h
#         protobuf/src/google/protobuf/port_def.inc
#         protobuf/src/google/protobuf/port_undef.inc
#         protobuf/src/google/protobuf/preserve_unknown_enum_test.cc
#         protobuf/src/google/protobuf/proto3_arena_lite_unittest.cc
#         protobuf/src/google/protobuf/proto3_arena_unittest.cc
#         protobuf/src/google/protobuf/proto3_lite_unittest.cc
#         protobuf/src/google/protobuf/proto3_lite_unittest.inc
#         protobuf/src/google/protobuf/reflection.h
#         protobuf/src/google/protobuf/reflection_internal.h
#         protobuf/src/google/protobuf/reflection_ops.cc
#         protobuf/src/google/protobuf/reflection_ops.h
#         protobuf/src/google/protobuf/reflection_ops_unittest.cc
#         protobuf/src/google/protobuf/repeated_field.cc
#         protobuf/src/google/protobuf/repeated_field.h
#         protobuf/src/google/protobuf/repeated_field_reflection_unittest.cc
#         protobuf/src/google/protobuf/repeated_field_unittest.cc
#         protobuf/src/google/protobuf/service.cc
#         protobuf/src/google/protobuf/service.h
#         protobuf/src/google/protobuf/source_context.pb.cc
#         protobuf/src/google/protobuf/source_context.pb.h
#         protobuf/src/google/protobuf/source_context.proto
#         protobuf/src/google/protobuf/struct.pb.cc
#         protobuf/src/google/protobuf/struct.pb.h
#         protobuf/src/google/protobuf/struct.proto
#         protobuf/src/google/protobuf/test_messages_proto2.proto
#         protobuf/src/google/protobuf/test_messages_proto3.proto
#         protobuf/src/google/protobuf/test_util.cc
#         protobuf/src/google/protobuf/test_util.h
#         protobuf/src/google/protobuf/test_util.inc
#         protobuf/src/google/protobuf/test_util2.h
#         protobuf/src/google/protobuf/test_util_lite.cc
#         protobuf/src/google/protobuf/test_util_lite.h
#         protobuf/src/google/protobuf/text_format.cc
#         protobuf/src/google/protobuf/text_format.h
#         protobuf/src/google/protobuf/text_format_unittest.cc
#         protobuf/src/google/protobuf/timestamp.pb.cc
#         protobuf/src/google/protobuf/timestamp.pb.h
#         protobuf/src/google/protobuf/timestamp.proto
#         protobuf/src/google/protobuf/type.pb.cc
#         protobuf/src/google/protobuf/type.pb.h
#         protobuf/src/google/protobuf/type.proto
#         protobuf/src/google/protobuf/unittest.proto
#         protobuf/src/google/protobuf/unittest_arena.proto
#         protobuf/src/google/protobuf/unittest_custom_options.proto
#         protobuf/src/google/protobuf/unittest_drop_unknown_fields.proto
#         protobuf/src/google/protobuf/unittest_embed_optimize_for.proto
#         protobuf/src/google/protobuf/unittest_empty.proto
#         protobuf/src/google/protobuf/unittest_enormous_descriptor.proto
#         protobuf/src/google/protobuf/unittest_import.proto
#         protobuf/src/google/protobuf/unittest_import_lite.proto
#         protobuf/src/google/protobuf/unittest_import_public.proto
#         protobuf/src/google/protobuf/unittest_import_public_lite.proto
#         protobuf/src/google/protobuf/unittest_lazy_dependencies.proto
#         protobuf/src/google/protobuf/unittest_lazy_dependencies_custom_option.proto
#         protobuf/src/google/protobuf/unittest_lazy_dependencies_enum.proto
#         protobuf/src/google/protobuf/unittest_lite.proto
#         protobuf/src/google/protobuf/unittest_lite_imports_nonlite.proto
#         protobuf/src/google/protobuf/unittest_mset.proto
#         protobuf/src/google/protobuf/unittest_mset_wire_format.proto
#         protobuf/src/google/protobuf/unittest_no_field_presence.proto
#         protobuf/src/google/protobuf/unittest_no_generic_services.proto
#         protobuf/src/google/protobuf/unittest_optimize_for.proto
#         protobuf/src/google/protobuf/unittest_preserve_unknown_enum.proto
#         protobuf/src/google/protobuf/unittest_preserve_unknown_enum2.proto
#         protobuf/src/google/protobuf/unittest_proto3.proto
#         protobuf/src/google/protobuf/unittest_proto3_arena.proto
#         protobuf/src/google/protobuf/unittest_proto3_arena_lite.proto
#         protobuf/src/google/protobuf/unittest_proto3_lite.proto
#         protobuf/src/google/protobuf/unittest_proto3_optional.proto
#         protobuf/src/google/protobuf/unittest_well_known_types.proto
#         protobuf/src/google/protobuf/unknown_field_set.cc
#         protobuf/src/google/protobuf/unknown_field_set.h
#         protobuf/src/google/protobuf/unknown_field_set_unittest.cc
#         protobuf/src/google/protobuf/well_known_types_unittest.cc
#         protobuf/src/google/protobuf/wire_format.cc
#         protobuf/src/google/protobuf/wire_format.h
#         protobuf/src/google/protobuf/wire_format_lite.cc
#         protobuf/src/google/protobuf/wire_format_lite.h
#         protobuf/src/google/protobuf/wire_format_unittest.cc
#         protobuf/src/google/protobuf/wrappers.pb.cc
#         protobuf/src/google/protobuf/wrappers.pb.h
#         protobuf/src/google/protobuf/wrappers.proto
#         protobuf/src/solaris/libstdc++.la
#         protobuf/src/libprotobuf-lite.map
#         protobuf/src/libprotobuf.map
#         protobuf/src/libprotoc.map
#         protobuf/src/Makefile.am
#         protobuf/src/README.md
#         protobuf_parser/_parser/errors.cpp
#         protobuf_parser/_parser/lib.cpp
#         protobuf_parser/_parser/parse.cpp
#         protobuf_parser/_parser.cpp protobuf_parser/_parser/run.cpp)
