[tool.poetry]
name = "protobuf_parser"
version = "0.1.0"
description = "Bindings for the protoc compiler"
authors = ["James <gobot1234yt@gmail.com>"]
license = "MIT"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^3.10.0"
tomli = "*"

[tool.poetry.dev-dependencies]
pybind11 = "^2.6.2"
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto.git"}

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11>=2.6.2", "tomli", "setuptools"]
build-backend = "poetry.core.masonry.api"
