[tool.poetry]
name = "protobuf_parser"
version = "1.0.0"
description = "Bindings for Google's protocol buffer compiler, protoc"
authors = ["James Hilton-Balfe <gobot1234yt@gmail.com>"]
license = "MIT"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.0.0"
tomli = "^1.2.2"

# [tool.poetry.group.dev.dependencies]
[tool.poetry.dev-dependencies]
pybind11 = "^2.6.2"
pytest = "^7.0.0"
black = "^22.1.0"
poethepoet = "^0.12.2"
pre-commit = "^2.17.0"
ipython = "^8.0.1"
requests = "^2.27.1"
betterproto = {version = "2.0.0b4", extras = ["compiler"]}
setuptools = "^60.9.1"

[tool.poe.tasks]
build_protobuf = {shell = """
poetry run python build_protobuf.py
cd protobuf
./configure
make -j
sudo make install
"""}

[tool.poe.poetry_hooks]
pre_build = "build_protobuf"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
atomic = true
ensure_newline_before_comments = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11>=2.6.2", "tomli", "setuptools"]
build-backend = "poetry.core.masonry.api"
