[tool.poetry]
name = "protobuf_parser"
version = "1.0.0"
description = "Bindings for Google's protocol buffer compiler, protoc"
authors = ["James Hilton-Balfe <gobot1234yt@gmail.com>"]
license = "MIT"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.1.1"

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.6.2"
pytest = "^7.0.0"
black = "^22.3.0"
isort = "^5.10.1"
poetry = {version = "^1.2.0b2", allow-prereleases = true}
poethepoet = {version = "^0.12.3", extras = ["poetry_plugin"]}
pre-commit = "^2.17.0"
betterproto = {version = "2.0.0b4", extras = ["compiler"]}
setuptools = "^60.9.1"
tomli = "^1.2.2"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
fmt = {sequence = ["_black", "_isort"], help = "Format the code"}
doc = {cmd = "sphinx-build -b html -T -W -n --keep-going docs/ docs/_build", help = "Build the documentation"}
build_protobuf = {script = "build_protobuf:main", help = "Build the protobuf directory"}

[tool.poe.poetry_hooks]
pre_install = "build_protobuf"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
atomic = true
ensure_newline_before_comments = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11", "tomli", "setuptools"]
build-backend = "poetry.core.masonry.api"
